--- a/Appendices/Methodology.tex
+++ b/Appendices/Methodology.tex
@@ -467,7 +467,7 @@ Note: Panels (a) displays a factor score estimated based on the measurement syst
 
 \begin{sidewaystable}[H]
 \begin{threeparttable}
-\caption{Prediction of Parental Income at (Child's) Age 21 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$, ABC/CARE}
+\caption{Prediction of Parental Income at (Child's) Age 21 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Pooled Sample, ABC/CARE}
 \label{table:end1}
 \centering
 \scriptsize
@@ -481,7 +481,35 @@ Note: Panels (a) displays a factor score estimated based on the measurement syst
 
 \begin{sidewaystable}[H]
 \begin{threeparttable}
-\caption{Prediction of Labor Income at Age 30 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$, ABC/CARE}
+\caption{Prediction of Parental Income at (Child's) Age 21 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Females Sample, ABC/CARE}
+\label{table:end1}
+\centering
+\scriptsize
+\input{output/abccare_endog_p_inc21y_sfemale_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of parental income at (child's) age 21 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. $\hat{\bm{\theta}}_{c}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and PIAT sections that we do not use to predict (reading and comprehension) as well as by the Peabody Picture Vocabulary Test (PPVT) (cognitive skill). $\hat{\bm{\theta}}_{n}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and on six scales of the Behavior Problems Index (e.g., anxiety, dependency, social behavior). Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\begin{sidewaystable}[H]
+\begin{threeparttable}
+\caption{Prediction of Parental Income at (Child's) Age 21 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Males Sample, ABC/CARE}
+\label{table:end1}
+\centering
+\scriptsize
+\input{output/abccare_endog_p_inc21y_smale_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of parental income at (child's) age 21 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. $\hat{\bm{\theta}}_{c}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and PIAT sections that we do not use to predict (reading and comprehension) as well as by the Peabody Picture Vocabulary Test (PPVT) (cognitive skill). $\hat{\bm{\theta}}_{n}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and on six scales of the Behavior Problems Index (e.g., anxiety, dependency, social behavior). Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\begin{sidewaystable}[H]
+\begin{threeparttable}
+\caption{Prediction of Labor Income at Age 30 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Pooled Sample, ABC/CARE}
 \label{table:end2}
 \centering
 \scriptsize
@@ -495,7 +523,35 @@ Note: Panels (a) displays a factor score estimated based on the measurement syst
 
 \begin{sidewaystable}[H]
 \begin{threeparttable}
-\caption{Prediction of Transfer Income at Age 30 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$, ABC/CARE}
+\caption{Prediction of Labor Income at Age 30 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Females Sample, ABC/CARE}
+\label{table:end2}
+\centering
+\scriptsize
+\input{output/abccare_endog_si30y_inc_labor_sfemale_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of labor income at age 30 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. $\hat{\bm{\theta}}_{c}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and PIAT sections that we do not use to predict (reading and comprehension) as well as by the Peabody Picture Vocabulary Test (PPVT) (cognitive skill). $\hat{\bm{\theta}}_{n}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and on six scales of the Behavior Problems Index (e.g., anxiety, dependency, social behavior). Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\begin{sidewaystable}[H]
+\begin{threeparttable}
+\caption{Prediction of Labor Income at Age 30 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Males Sample, ABC/CARE}
+\label{table:end2}
+\centering
+\scriptsize
+\input{output/abccare_endog_si30y_inc_labor_smale_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of labor income at age 30 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. $\hat{\bm{\theta}}_{c}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and PIAT sections that we do not use to predict (reading and comprehension) as well as by the Peabody Picture Vocabulary Test (PPVT) (cognitive skill). $\hat{\bm{\theta}}_{n}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and on six scales of the Behavior Problems Index (e.g., anxiety, dependency, social behavior). Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\begin{sidewaystable}[H]
+\begin{threeparttable}
+\caption{Prediction of Transfer Income at Age 30 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Pooled Sample, ABC/CARE}
 \label{table:end3}
 \centering
 \scriptsize
@@ -503,6 +559,165 @@ Note: Panels (a) displays a factor score estimated based on the measurement syst
 \begin{tablenotes}
 \footnotesize
 \item Note: Prediction of transfer income at age 30 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. $\hat{\bm{\theta}}_{c}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and PIAT sections that we do not use to predict (reading and comprehension) as well as by the Peabody Picture Vocabulary Test (PPVT) (cognitive skill). $\hat{\bm{\theta}}_{n}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and on six scales of the Behavior Problems Index (e.g., anxiety, dependency, social behavior). Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\begin{sidewaystable}[H]
+\begin{threeparttable}
+\caption{Prediction of Transfer Income at Age 30 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Females Sample, ABC/CARE}
+\label{table:end3}
+\centering
+\scriptsize
+\input{output/abccare_endog_si30y_inc_trans_pub_sfemale_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of transfer income at age 30 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. $\hat{\bm{\theta}}_{c}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and PIAT sections that we do not use to predict (reading and comprehension) as well as by the Peabody Picture Vocabulary Test (PPVT) (cognitive skill). $\hat{\bm{\theta}}_{n}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and on six scales of the Behavior Problems Index (e.g., anxiety, dependency, social behavior). Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\begin{sidewaystable}[H]
+\begin{threeparttable}
+\caption{Prediction of Transfer Income at Age 30 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Males Sample, ABC/CARE}
+\label{table:end3}
+\centering
+\scriptsize
+\input{output/abccare_endog_si30y_inc_trans_pub_smale_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of transfer income at age 30 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. $\hat{\bm{\theta}}_{c}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and PIAT sections that we do not use to predict (reading and comprehension) as well as by the Peabody Picture Vocabulary Test (PPVT) (cognitive skill). $\hat{\bm{\theta}}_{n}$: factor score estimated based on the measurement system in \eqref{eq:msystem} and on six scales of the Behavior Problems Index (e.g., anxiety, dependency, social behavior). Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\subsubsection{Complementing the Evidence Using Data from the Perry Preschool Project}
+
+We complement this more direct evidence using data from another randomized controlled trial, the Perry Preschool Project. For details on the program see \citet{Heckman_Pinto_etal_2013_PerryFactor}. We test the same hypothesis and choose predictors that are as similar as possible to our predictors. We use three dimensions for $\bm{\theta}$ because \citet{Heckman_Pinto_etal_2013_PerryFactor} extensively analyze several items meant to measure skills and behavior and find that three factors best describe the data. The three factors are measures of cognitive skills, externalizing behavior, and academic motivation. We use the same method as them to construct them. We fail to reject that the inputs summarize treatment (i.e. fail to reject the null hypothesis that the coefficient associated to the randomized treatment indicator is different from zero) for labor income and idleness at age 40. We do not fail to reject this hypotheses for high school graduation at age 40.
+
+\begin{sidewaystable}[H]
+\begin{threeparttable}
+\caption{Prediction of High School Graduation at Age 40 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Pooled Sample, Perry Preschool Project}
+\label{table:perry1}
+\centering
+\scriptsize
+\input{output/perry_endog_hs40_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of high school graduation at age 40 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. Cognitive, Externalizing, and Academic are factor scores estimated based on a system as the one in \eqref{eq:msystem} and using the measures of cognitive skills, externalizing behavior, and academic motivation between ages 6 and 9 used in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\begin{sidewaystable}[H]
+\begin{threeparttable}
+\caption{Prediction of High School Graduation at Age 40 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Females Sample, Perry Preschool Project}
+\label{table:perry1}
+\centering
+\scriptsize
+\input{output/perry_endog_hs40_sfemale_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of high school graduation at age 40 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. Cognitive, Externalizing, and Academic are factor scores estimated based on a system as the one in \eqref{eq:msystem} and using the measures of cognitive skills, externalizing behavior, and academic motivation between ages 6 and 9 used in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\begin{sidewaystable}[H]
+\begin{threeparttable}
+\caption{Prediction of High School Graduation at Age 40 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Males Sample, Perry Preschool Project}
+\label{table:perry1}
+\centering
+\scriptsize
+\input{output/perry_endog_hs40_smale_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of high school graduation at age 40 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. Cognitive, Externalizing, and Academic are factor scores estimated based on a system as the one in \eqref{eq:msystem} and using the measures of cognitive skills, externalizing behavior, and academic motivation between ages 6 and 9 used in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+
+\begin{sidewaystable}[H]
+\begin{threeparttable}
+\caption{Prediction of Idleness at Age 40 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Pooled Sample, Perry Preschool Project}
+\label{table:perry2}
+\centering
+\scriptsize
+\input{output/perry_endog_idle40_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of high school graduation at age 40 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. Cognitive, Externalizing, and Academic are factor scores estimated based on a system as the one in \eqref{eq:msystem} and using the measures of cognitive skills, externalizing behavior, and academic motivation between ages 6 and 9 used in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\begin{sidewaystable}[H]
+\begin{threeparttable}
+\caption{Prediction of Idleness at Age 40 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Females Sample, Perry Preschool Project}
+\label{table:perry2}
+\centering
+\scriptsize
+\input{output/perry_endog_idle40_sfemale_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of high school graduation at age 40 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. Cognitive, Externalizing, and Academic are factor scores estimated based on a system as the one in \eqref{eq:msystem} and using the measures of cognitive skills, externalizing behavior, and academic motivation between ages 6 and 9 used in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\begin{sidewaystable}[H]
+\begin{threeparttable}
+\caption{Prediction of Idleness at Age 40 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Males Sample, Perry Preschool Project}
+\label{table:perry2}
+\centering
+\scriptsize
+\input{output/perry_endog_idle40_smale_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of high school graduation at age 40 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. Cognitive, Externalizing, and Academic are factor scores estimated based on a system as the one in \eqref{eq:msystem} and using the measures of cognitive skills, externalizing behavior, and academic motivation between ages 6 and 9 used in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\begin{sidewaystable}[H]
+\begin{threeparttable}
+\caption{Prediction of Labor Income at Age 40 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Pooled Sample, Perry Preschool Project}
+\label{table:perry3}
+\centering
+\scriptsize
+\input{output/perry_endog_inc40_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of high school graduation at age 40 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. Cognitive, Externalizing, and Academic are factor scores estimated based on a system as the one in \eqref{eq:msystem} and using the measures of cognitive skills, externalizing behavior, and academic motivation between ages 6 and 9 used in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\begin{sidewaystable}[H]
+\begin{threeparttable}
+\caption{Prediction of Labor Income at Age 40 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Females Sample, Perry Preschool Project}
+\label{table:perry3}
+\centering
+\scriptsize
+\input{output/perry_endog_inc40_sfemale_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of high school graduation at age 40 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. Cognitive, Externalizing, and Academic are factor scores estimated based on a system as the one in \eqref{eq:msystem} and using the measures of cognitive skills, externalizing behavior, and academic motivation between ages 6 and 9 used in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\begin{sidewaystable}[H]
+\begin{threeparttable}
+\caption{Prediction of Labor Income at Age 40 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Males Sample, Perry Preschool Project}
+\label{table:perry3}
+\centering
+\scriptsize
+\input{output/perry_endog_inc40_smale_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of high school graduation at age 40 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. Cognitive, Externalizing, and Academic are factor scores estimated based on a system as the one in \eqref{eq:msystem} and using the measures of cognitive skills, externalizing behavior, and academic motivation between ages 6 and 9 used in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
 \end{tablenotes}
 \end{threeparttable}
 \end{sidewaystable}
