--- a/output/perry_endog_inc40.tex
+++ b/output/perry_endog_inc40.tex
@@ -1,7 +1,6 @@
-% matrix: allinc40 file: perry_endog_inc40.tex  29 Sep 2016 20:13:16
-\begin{table}[htbp]
-\begin{tabular}{lcccccccccccc} \hline \hline
- & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
+\begin{tabular}{lcccccccccccc} \toprule
+ & \multicolumn{2}{c}{(1)}  &  \multicolumn{2}{c}{(2)}  &  \multicolumn{2}{c}{(3)}  &  \multicolumn{2}{c}{(4)}  & \multicolumn{2}{c}{(5)} & \multicolumn{2}{c}{(6)} \\  
+ & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value \\ \midrule
 r1 &  3079.857 &     0.320 &  4285.173 &     0.290 & -2380.965 &     0.630 &  -505.703 &     0.520 & -2632.766 &     0.675 & -1505.246 &     0.570 \\  
 r2 &  1335.105 &     0.150 &    21.986 &     0.485 &  -789.184 &     0.795 & -1016.962 &     0.820 &  -761.051 &     0.795 & -1208.263 &     0.820 \\  
 r3 &         . &         . &         . &         . &   601.257 &     0.040 &   603.791 &     0.095 &   526.479 &     0.070 &   657.694 &     0.080 \\  
@@ -15,5 +14,4 @@ r10 & 12459.089 &     0.140 & 19522.639 &     0.105 & -8.95e+04 &     1.000 & -1
 r11 &     2.440 &     0.070 &     7.963 &     0.050 &    16.224 &     0.020 &    20.417 &     0.060 &    16.716 &     0.030 &    25.017 &     0.055 \\  
 r12 &     0.032 &     0.065 &     0.247 &     0.000 &     0.443 &     0.000 &     0.565 &     0.000 &     0.486 &     0.000 &     0.607 &     0.000 \\  
 r13 &   112.090 &     0.000 &    77.860 &     0.000 &   104.950 &     0.000 &    71.540 &     0.000 &   104.950 &     0.000 &    71.540 &     0.000 \\  
-\hline \hline \end{tabular}
-\end{table}
+\bottomrule \end{tabular}
