--- a/abc_comprehensivecba_appendix.tex
+++ b/abc_comprehensivecba_appendix.tex
@@ -75,18 +75,22 @@ University of Southern California}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{I.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{I.\arabic{table}}
-\input{Appendices/Sensitivity}
+\input{Appendices/VSensitivity}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{J.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{J.\arabic{table}}
-\input{Appendices/AlternativeMethodologies}
+\input{Appendices/Sensitivity}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{K.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{K.\arabic{table}}
-\input{Appendices/CommonCritiques}
+\input{Appendices/AlternativeMethodologies}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{L.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{L.\arabic{table}}
+\input{Appendices/CommonCritiques}
+
+\setcounter{figure}{0}  \renewcommand{\thefigure}{M.\arabic{figure}}
+\setcounter{table}{0}   \renewcommand{\thetable}{M.\arabic{table}}
 \input{Appendices/MoreOutcomes}
 
 \end{appendices}
