--- a/Appendices/VSensitivity.tex
+++ b/Appendices/VSensitivity.tex
@@ -2,16 +2,15 @@
 
 \noindent In the main paper, we let $V$ be a dummy variable indicating whether or not the child attended alternative preschool. As we show in Section~\ref{section:background}, this dummy variable is a summary of a more complex reality in which children attend alternative preschool different months between ages 0 to 5. In this appendix, we explore three different alternative definitions of $V$: we let $V$ indicate if children attend alternative preschool (i) $2/5$ of the time between ages 0 to 5; (ii) $3/5$ of the time between ages 0 to 5; and (iii) $4/5$ of the time between ages 0 to 5. For each of these cases, we present a summary table of treatment effects analogous to Table~\ref{table:tescombined} in the main paper.\\
 
-\noindent \textbf{[JLG: results running.]}
+\noindent The results are robust to the decision of modeling $V$ in a way such that what matters is the extensive margin decision to enroll children into alternative preschool, and not the intensive margin decision of the number of months they attend between ages 0 to 5.
 
-\begin{comment}
 \newgeometry{top=.6in, bottom=.8in, left=.8in, right=.8in}
 \begin{table}[!htbp]
 \centering
 \begin{threeparttable}
-\caption{Treatment Effects on Selected Outcomes, Control Substitution if Attended Alternative Preschool $2/5$ of Time between Ages 0 to 5}\label{table:tescombinedv1}
+\caption{Treatment Effects on Selected Outcomes, Control Substitution if Attended Alternative Preschool $2/5$ of Time between Ages 0 to 5}\label{table:tescombinedv3}
 \begin{scriptsize}
-\input{output/select_rslt_combined_v1.tex}
+\input{output/select_rslt_combined_v3.tex}
 \end{scriptsize}
 \begin{tablenotes}
 \tiny
@@ -37,9 +36,9 @@ Note: This table shows the treatment effects for categories outcomes that are im
 \begin{table}[!htbp]
 \centering
 \begin{threeparttable}
-\caption{Treatment Effects on Selected Outcomes, Control Substitution if Attended Alternative Preschool $4/5$ of Time between Ages 0 to 5}\label{table:tescombinedv3}
+\caption{Treatment Effects on Selected Outcomes, Control Substitution if Attended Alternative Preschool $4/5$ of Time between Ages 0 to 5}\label{table:tescombinedv1}
 \begin{scriptsize}
-\input{output/select_rslt_combined_v3.tex}
+\input{output/select_rslt_combined_v1.tex}
 \end{scriptsize}
 \begin{tablenotes}
 \tiny
@@ -47,7 +46,6 @@ Note: This table shows the treatment effects for categories outcomes that are im
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
-\end{comment}
 
 \restoregeometry
 \doublespacing
