--- a/abc_comprehensivecba_appendix.tex
+++ b/abc_comprehensivecba_appendix.tex
@@ -17,15 +17,14 @@ James J. Heckman \\
 American Bar Foundation \\
 Department of Economics\\
 The University of Chicago \and
-Andr\'{e}s Hojman \\
-PUC-Chile School of Government \\ \and
 Duncan Ermini Leaf \\
-Leonard D. Schaeffer Center for Health Policy and Economics\\
+Leonard D. Schaeffer Center \\  for Health Policy and Economics\\
 University of Southern California \and
 Mar\'{i}a Jos\'{e} Prados \\
-Dornsife Center for Economic and Social Research\\
+Dornsife Center for \\ Economic and Social Research\\
 University of Southern California}
 \date{First Draft: January 5, 2016\\ This Draft: \today}
+
 \maketitle
 \thispagestyle{empty}
 
