add current draft

--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -43,7 +43,7 @@ University of Southern California}
 
 \singlespacing
 \begin{abstract}
-\noindent This paper estimates the diverse array of life-cycle benefits of an influential early childhood program targeted to disadvantaged children and their families. The program is a prototype for numerous interventions currently in place around the world. It is evaluated by random assignment and follows participants through their mid-30s. It has substantial beneficial long-term effects on (a) health and the quality of life, (b) the labor incomes of participants, (c) crime, (d) education, and (e) the labor incomes of the mothers of the participants through subsidizing their childcare. Benefits arise in multiple domains across the life cycle for both genders, but there are substantially greater monetized benefits for males. The overall rate of return and benefit/cost ratio are economically and statistically significant: 13\% per annum and 5.6 respectively. These estimates account for the welfare costs of taxation to finance the program and survive a variety of sensitivity analyses. Accounting for substitutes to treatment available to the control group shows that males benefit much less from low quality alternative childcare than females.
+\noindent This paper estimates the diverse array of life-cycle benefits of an influential early childhood program targeted to disadvantaged children and their families. The program is a prototype for numerous interventions currently in place around the world. It is evaluated by random assignment and follows participants through their mid-30s. It has substantial beneficial long-term effects on (a) health and the quality of life, (b) the labor incomes of participants, (c) crime, (d) education, and (e) the labor incomes of the mothers of the participants through subsidizing their childcare. Benefits arise in multiple domains across the life cycle for both genders, but there are substantially greater monetized benefits for males. The overall rate of return and benefit/cost ratio are economically and statistically significant: 13\% per annum and 5.6 respectively. These estimates account for the welfare costs of taxation to finance the program and survive a variety of sensitivity analyses. Accounting for substitutes to treatment available to the control group shows that males benefit much less from relatively low quality alternative childcare than females.
 \end{abstract}
 
 \noindent \textbf{Keywords}: Childcare, crime, early childhood education, gender differences in responses to programs, health, long-term predictions, quality of life, randomized trials, substitution bias \\
